<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".JavaLessonsActivity.JavaComments">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Comments"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.006"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="54dp"
            android:layout_height="74dp"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/codey_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/codey_java" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/callout_background"
            android:text="@string/have_you_ever_wonder_if_you_can_put_a_text_in_java_that_looks_like_a_note_to_identify_what_kind_of_code_is_it_without_being_interpreted_by_the_compiler_worry_no_more_because_i_introduce_to_you_the_java_comments_let_s_see_what_we_ve_got_here"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.47"
            tools:ignore="TextSizeCheck,VisualLintLongText" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/in_java_comments_are_non_executable_lines_of_code_that_provide_explanations_annotations_or_disable_codes_temporarily_they_are_essential_for_code_documentation_readability_and_collaboration_there_are_three_types_of_comments_in_java_single_line_comments_multi_line_comments_and_javadoc_comments"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:ignore="TextSizeCheck,VisualLintLongText" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/single_line_comments"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/here_is_an_example_of_a_single_line_comment"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="TextSizeCheck,VisualLintLongText" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/callout_background"
            android:text="@string/this_comment_just_has_one_line"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:ignore="TextSizeCheck,VisualLintLongText" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/multi_line_comments"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />


        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/javadoc_comments"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView36" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/a_single_line_of_code_can_be_transformed_into_a_comment_to_provide_a_brief_explanation_it_is_considered_a_comment_and_will_not_be_processed_if_text_is_added_to_a_line_after"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            tools:ignore="TextSizeCheck,VisualLintLongText" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="15dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="15dp" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/a_multi_line_comments_can_occupy_at_least_2_lines_of_code_and_more_that_depends_to_the_preference_of_the_programmer_or_developer_it_can_also_disregard_codes_and_transform_into_comments_by_clicking_ctrl_on_the_keyboard_and_simultaneously"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView31"
            tools:ignore="TextSizeCheck,VisualLintLongText" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/here_is_an_example_of_a_multi_line_comment"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView30"
            tools:ignore="TextSizeCheck,VisualLintLongText" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/javadoc_comments_usually_begin_with_and_end_with_and_can_include_various_tags_and_annotations_that_provides_detailed_information_about_the_documented_elements"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView33"
            tools:ignore="TextSizeCheck,VisualLintLongText" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/callout_background"
            android:text="@string/this_comment_consists_of_several_lines_it_may_vary_according_to_the_preference_of_the_developer"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView35"
            tools:ignore="TextSizeCheck,VisualLintLongText" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/a_javadoc_comments_are_special_type_of_comments_that_is_used_in_java_to_generate_automatic_documentation_it_is_usually_written_in_a_specific_format_that_can_be_used_to_document_program_elements_such_as_classes_interfaces_methods_fields_etc_this_is_then_processed_by_the_javadoc_tool_which_later_on_creates_html_based_documentation_files"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView37"
            tools:ignore="TextSizeCheck,VisualLintLongText" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/here_is_an_example_of_a_javadoc_comment"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView38"
            tools:ignore="TextSizeCheck,VisualLintLongText" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/callout_background"
            android:text="@string/javadoc"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView39"
            tools:ignore="TextSizeCheck,VisualLintLongText" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/callout_background"
            android:text="@string/always_remember_that_it_is_a_good_practice_to_include_comments_in_the_code_to_improve_its_readability_and_maintainability_as_well_as_easily_identify_the_errors_when_the_program_stops_producing_output_and_needs_to_be_debug_by_the_developer"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8"
            app:layout_constraintVertical_bias="0.47"
            tools:ignore="TextSizeCheck,VisualLintLongText" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="54dp"
            android:layout_height="74dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/codey_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView40"
            app:srcCompat="@drawable/codey_java" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="54dp"
            android:layout_height="74dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/codey_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView41"
            app:layout_constraintVertical_bias="0.07"
            app:srcCompat="@drawable/codey_java_dyk" />

        <TextView
	        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions_you_might_asked"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView13"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView13"
            app:layout_constraintTop_toTopOf="@+id/imageView13"
            app:layout_constraintVertical_bias="0.4" />

        <Button
            android:id="@+id/btnquestion1"
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:theme="@style/lionelButton"
            android:text="@string/what_is_the_purpose_of_comments_in_java"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/imageView13" />

        <Button
            android:id="@+id/btnquestion2"
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:theme="@style/lionelButton"
            android:text="@string/what_is_the_difference_of_a_single_line_vs_multi_line_comment"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/btnquestion1"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/btnquestion3"
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:theme="@style/lionelButton"
            android:text="@string/can_comments_slow_down_a_program_s_execution"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/btnquestion2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
