<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="care_fragments.HomeFragment" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="127dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/codey_image"
        android:src="@drawable/codey_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="60dp"
        android:layout_height="127dp"
        android:contentDescription="@string/codey_image"
        android:src="@drawable/codey_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:background="@drawable/callout_background"
        android:fontFamily="@font/lionel"
        android:text="@string/welcome_to_care_i_m_codey_your_virtual_assistant_app_guide"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.529"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:background="@drawable/callout_background"
        android:fontFamily="@font/lionel"
        android:text="@string/to_continue_kindly_choose_your_desired_programming_language_that_you_want_to_learn_and_let_s_get_started"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.346"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/btnJava"
        android:layout_width="318dp"
        android:layout_height="110dp"
        android:adjustViewBounds="false"
        android:background="@drawable/smooth_image_button"
        android:contentDescription="@string/java_button"
        android:cropToPadding="false"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.06"
        app:srcCompat="@drawable/java_icon" />

    <ImageButton
        android:id="@+id/btnC"
        android:layout_width="318dp"
        android:layout_height="110dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/smooth_image_button"
        android:contentDescription="@string/c_button"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/btnJava"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnJava"
        app:layout_constraintTop_toBottomOf="@+id/btnPython"
        app:srcCompat="@drawable/csharp_icon" />

    <ImageButton
        android:id="@+id/btnPython"
        android:layout_width="318dp"
        android:layout_height="110dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/smooth_image_button"
        android:contentDescription="@string/python_button"
        android:paddingTop="10dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="@+id/btnJava"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnJava"
        app:layout_constraintTop_toBottomOf="@+id/btnJava"
        app:srcCompat="@drawable/python_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>


